Partial revert of ffbc93eb (on the poole repo), fixes the displaying of pagination controls on mobile

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -4,7 +4,7 @@
 // there are no more previous or next posts to show.
 
 .pagination {
-  display: flex;
+  overflow: hidden; // clearfix
   margin: 0 -1.5rem var(--spacer);
   color: var(--gray-500);
   text-align: center;
